alert if no uploaded background image

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 							</td>
 						</tr>
 						<tr>
-							<td>ROW HEIGHT</td>
+							<td>TABLE HEIGHT</td>
 							<td class="input-td">
-								<input type="number" min="0" value="28" id="row_height" />
+								<input type="number" min="0" value="100" id="table_height" />
 							</td>
 						</tr>
 						<tr>
